# Pangi

./: .gitignore  AGENTS.md  README.md
pangi/: .env.example  README.md  deploy-bot.sh  deploy.sh  kill-port.sh  pyproject.toml  requirements.txt
pangi/evals/cases/: core_behavior.json  red_team.json
pangi/scripts/: init-local-env.sh
pangi/src/pangi/: __init__.py  app.py
pangi/src/pangi/config/: __init__.py  settings.py
pangi/src/pangi/domain/: __init__.py  errors.py  models.py  policies.py
pangi/src/pangi/evaluations/: __init__.py  __main__.py  case_loader.py  gate.py  grader.py  harness.py  models.py  operations.py  persistence.py  red_team.py  run.py  runner.py  scheduler.py  trace.py
pangi/src/pangi/infra/: __init__.py
pangi/src/pangi/prompts/: __init__.py  chat.md  git_context.md  loader.py  notion_context.md  orchestrator.md  pangi_agent.md  read_only_analysis.md
pangi/src/pangi/repository/: __init__.py  job_repository_protocol.py  job_repository_sqlite_impl.py
pangi/tests/: test_admin_routes.py  test_classify_request.py  test_codex_orchestrator.py  test_codex_runner.py  test_eval_scheduler.py  test_evaluations.py  test_git_mcp_context_provider.py  test_health.py  test_input_guardrail.py  test_job_repository.py  test_job_worker.py  test_markdown_to_slack.py  test_notion_context_provider.py  test_notion_token_store.py  test_openai_orchestrator.py  test_output_guardrail.py  test_run_analysis_job.py  test_scheduler.py  test_settings.py  test_slack_routes.py  test_submit_slack_request.py  test_thread_context.py  test_worktree_manager.py
(+79 files in other folders)
